# BrowserOS

./: .auctor.json  .gitignore  CONTRIBUTING.md  README.md
.github/workflows/: build-agent-container.yml  build-agent.yml  build-vm-container.yml  eval-weekly.yml  nightly-macos-build.yml  nightly-release.yml  release-agent-extension.yml  release-cli.yml  sync-internal-docs.yml  test.yml
docs/troubleshooting/: connection-issues.mdx
prototypes/click_eval/: README.md  pyproject.toml
prototypes/click_eval/examples/: models.json  tasks.jsonl
prototypes/click_eval/examples/screenshots/: aliexpress_search_by_image.meta.json  bustracker_208_cork_city_centre.meta.json  izz_table_booking_footer.meta.json
prototypes/click_eval/src/click_eval/: local_hf.py  openrouter.py  parsing.py
