[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "click-eval"
version = "0.1.0"
description = "Quick OpenRouter VLM click-point evaluation prototype"
requires-python = ">=3.12"
dependencies = [
  "Pillow>=10.0.0",
  "tqdm>=4.67.3",
]

[project.optional-dependencies]
local = [
  "accelerate>=1.0.0",
  "decord2>=0.2.0",
  "einops>=0.8.0",
  "protobuf>=4.25.0",
  "qwen-vl-utils>=0.0.14",
  "requests>=2.32.0",
  "safetensors>=0.4.3",
  "sentencepiece>=0.2.0",
  "timm>=1.0.0",
  "torch>=2.6.0",
  "torchvision>=0.21.0",
  "transformers>=4.57.1,<5.0.0",
  "WePOINTS @ git+https://github.com/WePOINTS/WePOINTS.git",
  "tiktoken>=0.7.0",
]

[project.scripts]
click-eval = "click_eval.cli:main"

[dependency-groups]
dev = [
  "basedpyright>=1.39.3",
  "pylsp-rope>=0.1.17",
  "pytest>=8.0.0",
  "python-lsp-server>=1.14.0",
  "ruff>=0.14.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 88
target-version = "py312"
